test_data/notls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: no-tls-example-app
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: notls.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-app
                port:
                  number: 80
